--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
     server_name  localhost;
-    root         /var/www/escape-room/public;
+    root         /var/www/room-609/public;
 
     access_log  /var/log/nginx/escape_room.access.log  main;
     error_log   /var/log/nginx/escape_room.error.log   warn;
@@ -11,7 +11,7 @@ server {
     }
 
     location /index.php {
-        fastcgi_pass   escape-php-fpm:9000;
+        fastcgi_pass   room-609-php:9000;
         fastcgi_index  index.php;
         include        fastcgi_params;
         fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
