--- a/docker/php/override-php.ini
+++ b/docker/php/override-php.ini
@@ -15,7 +15,7 @@ session.cookie_httponly = On
 session.cookie_secure = Off
 session.hash_bits_per_character = 4
 session.hash_function = "sha256"
-session.name = "ESCRMSESSID"
+session.name = "ROOM609SESSID"
 session.save_path = "/var/cache/php/session"
 session.sid_bits_per_character = 4
 session.sid_length = 64
