--- a/.env
+++ b/.env
@@ -33,9 +33,8 @@ MYSQL_ROOT_PASSWORD=NUsc2I8dn2FNJsO7E3HkzwO0o
 MYSQL_USER=escape_user
 MYSQL_USER_PASSWORD=Eyaj9HMqWqIVHi2DxIT5Y5W5K
 
-DATABASE_URL=mysql://root:NUsc2I8dn2FNJsO7E3HkzwO0o@room-609-mariadb:3307/room-609
-MYSQL_USER=root
-MYSQL_USER_PASSWORD=Usc2I8dn2FNJsO7E3HkzwO0o
+DATABASE_URL=mysql://escape_user:Eyaj9HMqWqIVHi2DxIT5Y5W5K@room-609-mariadb:3307/room-609
+DATABASE_MIGRATIONS_URL=mysql://root:NUsc2I8dn2FNJsO7E3HkzwO0o@room-609-mariadb:3307/room-609
 
 # Node
 NODE_ENV=dev
