--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,22 @@
 doctrine:
     dbal:
-        override_url: true
-        url: '%env(resolve:DATABASE_URL)%'
+#        override_url: true
+#        url: '%env(resolve:DATABASE_URL)%'
+
+        default_connection: default
+        connections:
+            default:
+                # This will be the connection used by the default entity manager
+                url: '%env(resolve:DATABASE_URL)%'
+#                driver: 'pdo_pgsql'
+                server_version: '10.5'
+                charset: UTF8
+            migrations:
+                # This will be the connection used for playing the migrations
+                url: '%env(resolve:DATABASE_MIGRATIONS_URL)%'
+#                driver: 'pdo_pgsql'
+                server_version: '10.5'
+                charset: UTF8
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
