--- a/docker/php/override-php.ini
+++ b/docker/php/override-php.ini
@@ -26,5 +26,5 @@ xdebug.mode=debug
 xdebug.client_host=host.docker.internal
 xdebug.client_port=9003
 xdebug.start_with_request=yes
-xdebug.idekey = "EscapeRoom"
+xdebug.idekey = "Room-609"
 xdebug.discover_client_host = 1
