--- a/.env
+++ b/.env
@@ -37,7 +37,7 @@ DATABASE_URL=mysql://escape_user:Eyaj9HMqWqIVHi2DxIT5Y5W5K@room-609-mariadb:3307
 DATABASE_MIGRATIONS_URL=mysql://root:NUsc2I8dn2FNJsO7E3HkzwO0o@room-609-mariadb:3307/room-609
 
 # Node
-NODE_ENV=dev
+NODE_ENV=prod
 
 # Application prefix used to setup docker containers
 APP_NAME=room-609
