--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,8 @@ yarn-error.log
 ###< symfony/webpack-encore-bundle ###
 /webpack.config.js.bak
 
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
