--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "devDependencies": {
-        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-react": "^7.0.0",
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.8.1",
         "core-js": "^3.0.0",
@@ -18,8 +18,10 @@
         "start": "react-scripts --openssl-legacy-provider start"
     },
     "dependencies": {
+        "bootstrap": "^5.1.3",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
+        "react-bootstrap": "^2.2.1",
         "react-dom": "^17.0.2"
     },
     "name": "room-609",
