Fixed database version

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ APP_SECRET=443ee92b1a58e07c17e767abae9f492b
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://escape_user:Eyaj9HMqWqIVHi2DxIT5Y5W5K@room-609-mariadb:3307/room-609
+# DATABASE_URL=mysql://escape_user:Eyaj9HMqWqIVHi2DxIT5Y5W5K@room-609-mariadb:3307/room-609
 ###< doctrine/doctrine-bundle ###
 MYSQL_ROOT_PASSWORD=NUsc2I8dn2FNJsO7E3HkzwO0o
 MYSQL_USER=escape_user
